added card reveal function; still WIP. Changed card size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,8 @@ main {
     background-color: white;
     border-radius: 0.25rem;
     margin: 0;
+    height: 200px;
+    width: 800px;
 }
 
 .card * {
