--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,20 @@ body {
   margin: 0;
   background-color: whitesmoke;
   border-radius: 0.25rem;
-  margin: 1.5rem 1.5rem 0 1.5rem;
+  margin: 1.5rem;
   font-family: "Poppins", sans-serif;
+}
+
+#landing-page-body {
+  margin: 1.5vh;
+  height: 97vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#landing-page-body > .search-container {
+  border-bottom: none;
 }
 
 .cards-container {
