changed logo size and padding top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,9 @@ html {
 }
 
 .search-container img {
-  width: 40vw;
+  width: 30vw;
   height: auto;
+  padding-top: 1rem;
 }
 
 .search-container form {
